--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,6 +2,8 @@ version: 1.0.{build}
 image: Visual Studio 2019
 environment:
     nodejs_version: "22"
+    GITHUB_TOKEN:
+        secure: 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
 install:
     - ps: Install-Product node $env:nodejs_version
     - yarn install
@@ -10,8 +12,15 @@ build_script:
 artifacts:
     - path: dist
       name: dist
+on_success:
+  - git config --global user.name "AppVeyor"
+  - git config --global user.email "appveyor@example.com"
+  - git remote set-url origin https://%GITHUB_TOKEN%@github.com/PrekinII/Trello-js.git
+  - yarn deploy
 deploy:
-    provider: GitHub
-    artifact: dist
-    on:
-        branch: main
+  provider: GitHub
+  auth_token:
+    secure: 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
+  tag: $(APPVEYOR_BUILD_VERSION)
+  on:
+    branch: main
