--- a/package.json
+++ b/package.json
@@ -20,9 +20,15 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack --mode production",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint src"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "@eslint/js": "^9.22.0",
+    "eslint": "^9.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.31.0",
+    "gh-pages": "^6.3.0",
+    "globals": "^16.0.0"
   }
 }
