--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@eslint/js": "^9.22.0",
     "eslint": "^9.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-prettier": "^5.2.3",
     "gh-pages": "^6.3.0",
-    "globals": "^16.0.0"
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3"
   }
 }
