--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.5.3"
   }
 }
