--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "webpack serve",
     "build": "webpack --mode production",
     "deploy": "gh-pages -d dist",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -34,6 +35,7 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "html-loader": "^5.1.0",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
     "prettier": "^3.5.3"
   }
