--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -58,6 +58,8 @@
 #   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
 #   - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
 
+# Настройки выше не работают!!!
+
 deploy:
   provider: GitHub
   auth_token:
