--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,69 +29,65 @@
 
 
 
-# image: Ubuntu2204  # образ для сборки
+image: Ubuntu2204  # образ для сборки
 
-# stack: node 22  # окружение
-
-# branches:
-#   only:
-#     - master  # ветка git
-#     - main
-
-# cache: node_modules  # кеширование
-
-# install:
-#   - yarn  # команда установки зависимостей
-
-# build: off  # отключаем встроенную в appveyor систему сборки
-
-# build_script:
-#   - yarn build   # команда сборки
-
-# test_script:
-#   - yarn lint && yarn test  # скрипт тестирования
-
-# deploy_script:  # скрипт развёртывания
-#   - git config --global credential.helper store
-#   - git config --global user.name AppVeyor
-#   - git config --global user.email ci@appveyor.com
-#   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
-#   - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
-
-# Настройки выше не работают!!!
-
-image: Ubuntu2204
-
-stack: node 22
-
-environment:
-  GITHUB_TOKEN:
-    secure: v+rixxnOEEOr3Q1jzX1djkwvuqepqTaRiZlRIOqEdooA6YviSvXGEwq34iaoSa2j
+stack: node 22  # окружение
 
 branches:
   only:
-    - master
+    - master  # ветка git
     - main
-  except:
-    - gh-pages
 
-cache:
-  - node_modules
+cache: node_modules  # кеширование
 
 install:
-  - yarn
+  - yarn  # команда установки зависимостей
 
-build: off
+build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - yarn build
-
-artifacts:
-  - path: dist
-    name: dist
+  - yarn build   # команда сборки
 
 test_script:
-  - yarn lint && yarn test
+  - yarn lint  # скрипт тестирования
+
+deploy_script:  # скрипт развёртывания
+  - git config --global credential.helper store
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
+  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
+  - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
+
+# Настройки выше не работают!!!
+
+# image: Ubuntu2204
+
+# stack: node 22
+
+# branches:
+#   only:
+#     - master
+#     - main
+#   except:
+#     - gh-pages
+
+# cache:
+#   - node_modules
+
+# install:
+#   - yarn
+
+# build: off
+
+# build_script:
+#   - yarn build
+
+# artifacts:
+#   - path: dist
+#     name: dist
+
+# test_script:
+#   - yarn lint && yarn test
 
 # deploy:
 #   provider: GitHub
